--- a/src/app/gs-viewer/toolwindow/toolwindow.component.css
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.css
@@ -1,18 +1,33 @@
 #toolwindow{
   background-color:white;
-  overflow-x: scroll !important;
+  /*overflow-x: scroll !important;*/
   font-family:sans-serif;
+  width: 100%;
 }
 #toolbar{
-  background-color: #E6E6E6;
+  background-color: #f1f1f1 !important;
   float: left;
   width: 50%;
-  height: 25px;
-  left: 30px;
+  height: 30px;
+  left: 0px;
   margin-top:0px;
   overflow: hidden !important;
   font-family:sans-serif;
+  position: fixed;
+  /*display: flex;*/
+  align-items: center;
 }
+#pagination{
+  float: right;
+  width: 50%;
+  height: 30px;
+  right: 0px;
+  position: fixed !important;
+  top:unset !important;
+  margin-top: 0px;
+  background-color: #f1f1f1 !important;
+}
+
 .table_ojbs{
   table-layout:fixed;
   overflow-x: scroll !important;
@@ -22,48 +37,45 @@
   overflow:hidden; 
   white-space:nowrap; 
 }
-/*#toolview{
-  overflow-x: scroll;
-}*/
-#point{
+#toolview{
+  position:relative;
+  margin-top: 30px;
+  width: 100%;
+  float: left;
+}
+
+#selectedname{
+  font-size: 12px;
+  vertical-align: middle;
+}
+#gsv-point{
   margin-left:25px;
-  font-size:15px;
-  background:transparent;
-  border:0;
-  font-family:sans-serif;
 }
-#vertice{
-  font-size:15px;
-  background-color:transparent;
-  border:0;
-  font-family:sans-serif;
-}
-#edge{
-  font-size:15px;
-  background-color:transparent;
-  border:0;
-  font-family:sans-serif;
-}
-#wire{
-  font-size:15px;
-  background-color:transparent;
-  border:0;
-  font-family:sans-serif;
-}
-#face{
-  font-size:15px;
-  background-color:transparent;
-  border:0;
-  font-family:sans-serif;
-}
-#object{
-  font-size:15px;
-  background-color:transparent;
-  border:0;
-  font-family:sans-serif;
-}
-#selected{
+#gsv-selected{
   margin-left:30px;
+}
+.gsv-toolbar{
+  font-size:15px;
+  background-color:transparent;
+  border:0;
+  font-family:sans-serif;
+  padding-top:1px;
+  padding-right: 6px;
+  padding-bottom: 1px;
+  padding-left: 6px;
+  align-items: flex-start;
+  text-align: center;
+  cursor: default;
+  color: unset;
+  margin-right: 0px;
+  margin-left: 0px;
+  margin-bottom: 1px;
+  margin-top: 1px;
+  box-sizing: border-box;
+  border-width: unset;
+  border-style: unset;
+  border-color: unset;
+  border-image: unset;
 }
 .visible{
   background-color: white !important;
@@ -106,7 +118,7 @@
   background-color: #E6E6E6;
   float: right;
   right: 0px;
-  height: 25px;
+  height: 30px;
   color:black !important;
   top:0px;
   overflow: hidden !important;
