--- a/src/app/gs-viewer/gs-viewer.component.html
+++ b/src/app/gs-viewer/gs-viewer.component.html
@@ -1,22 +1,20 @@
-<div id="appdiv">
-	<split direction="vertical"              
-	[gutterSize]="7" 
-	[useTransition]="true" gutterColor=white>
-		<split-area [size]="90" id="splitcontainer">
+<div id="appdiv" (mousedown)="leaflet()">
+	<split direction="vertical">
+		<split-area [size]="94" id="splitcontainer">
 		  <div style="height: 100%">
-		    <split direction="horizontal"	
-		    [gutterSize]="7" 
-			[useTransition]="true" gutterColor=white>
-		      <split-area [size]="0.5" id="splitgroups">
+		    <split direction="horizontal">
+		      <split-area [size]="0.5" id="splitgroups" style="overflow-x:hidden;overflow-y: auto;">
 		        <app-groups></app-groups>
 		      </split-area>
 		      <split-area [size]="99.5" id="splitviewer">
+		        <!-- <app-viewer *ngIf="imVisible===false"></app-viewer>
+		        <app-map *ngIf="imVisible===true"></app-map> -->
 		        <app-viewer></app-viewer>
 		      </split-area>
 		    </split>
 		  </div>
 		</split-area>
-		<split-area [size]="10" id="splittoolwindow">
+		<split-area [size]="6" id="splittoolwindow">
 			<app-toolwindow></app-toolwindow>
 		</split-area>
 	</split>
