--- a/src/app/gs-viewer/gs-viewer.component.scss
+++ b/src/app/gs-viewer/gs-viewer.component.scss
@@ -1,5 +1,4 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
-@import '~scss/globals';
 
 @font-face{
   font-family: "FontAwesome";
@@ -26,6 +25,10 @@ html, body {
   height: 100%;
   background-color: white;
 }
+#splittoolwindow{
+  overflow:scroll !important;
+}
+
 
 a { text-decoration: none; color: #fff; text-transform: uppercase; }
 .toolbar { background-color: #333; }
@@ -39,8 +42,6 @@ a { text-decoration: none; color: #fff; text-transform: uppercase; }
   display: block; float: left;
   padding: 0 16px;
 }
-
-
 /**
  * Carets
  */
@@ -58,7 +59,6 @@ a { text-decoration: none; color: #fff; text-transform: uppercase; }
 /**
  * Sub navigaton
  **/
-
 .sub { 
   min-width: 180px; margin: 20px;
   display: none; position: absolute; 
@@ -204,5 +204,3 @@ a { text-decoration: none; color: #fff; text-transform: uppercase; }
     border-bottom: 30px solid transparent;
 
 }
-
-
