--- a/src/app/gs-viewer/toolwindow/groups.component.css
+++ b/src/app/gs-viewer/toolwindow/groups.component.css
@@ -9,7 +9,7 @@
   overflow-y: hidden !important;
 }
 #groupsview{
-  color:black;
+  color:#395d73;
   background-color: #F1F1F1 !important;
   font-family: Roboto,"Helvetica Neue",sans-serif;
   font-size: 12px !important;
@@ -21,8 +21,9 @@
   line-height: 14px;
   overflow-x: hidden !important;
   overflow-y: hidden !important;
-  width: 240px;
-  height: 600px;
+  width: 1600px;
+  height: 800px;
+  color: #395d73;
 }
 .check{
   margin-left:10px;
@@ -52,7 +53,14 @@
   margin-left:9px;
 }
 .name{
+  width: 100%;
   margin-left: 10px;
+  margin-top: 8px;
+}
+#slider-conainer{
+  align-items: center !important;
+  display: flex;
+  float: right;
 }
 
 ::ng-deep .mat-accent .mat-slider-thumb {
@@ -60,19 +68,32 @@
     font-family:sans-serif;
 } 
 ::ng-deep .mat-accent .mat-slider-thumb-label {
-    background-color: #395d73;
+    background-color: white;
+    color:#395d73;
     font-family:sans-serif;
-} 
+}
 ::ng-deep .mat-accent .mat-slider-track-fill {
     background-color: #395d73;
     font-family:sans-serif;
 }
-::ng-deep .mat-expansion-panel {
+
+/deep/.mat-slider-min-value.mat-slider-thumb-label-showing .mat-slider-thumb, .mat-slider-min-value.mat-slider-thumb-label-showing .mat-slider-thumb-label {
+    background-color: #395d73;
+}
+/*::ng-deep .mat-expansion-panel {
   margin: 0px !important;
   overflow: hidden !important;
+} */
+/deep/ .slider {
+  height: 25px !important;
+  vertical-align: unset !important;
+  width: unset !important;
 }
 
-.mat-expansion-panel{
+
+
+
+/*.mat-expansion-panel{
    background-color: #F1F1F1 !important;
    border-color: #395d73;
    line-height: 14px;
@@ -80,16 +101,9 @@
    font-size: 12px !important;
 }
 .mat-tab-group{
-/*background-color: #F1F1F1 !important;
-  border-color: #395d73;
-  line-height: 14px;
-  font-weight: bold !important;
-  font-size: 12px !important;
-  color:#395d73;
-  border: 0;*/
   border: 0px solid #F1F1F1;
   color:#395d73;
-}
+}*/
 
 /deep/.mat-tab-label, /deep/.mat-tab-label-active{
   min-width: 3px!important;
@@ -106,10 +120,23 @@
 /deep/.mat-ink-bar{
   background-color: #395d73 !important;
 }
-/*.mat-tab{
+.mat-tab{
   min-width: 30px !important;
 }
-*/
+
+.mat-expansion-panel-spacing {
+  margin-top:0px;
+  margin-bottom: 0px;
+}
+.mat-expansion-panel{
+  background-color: #F1F1F1 !important;
+  border-color: #395d73;
+  line-height: 14px;
+  font-weight: bold !important;
+  font-size: 12px !important;
+  overflow: hidden !important;
+}
+
 #groupname{
   margin-right: 0px;
 }
@@ -119,23 +146,34 @@
   margin-left: 0px;
   color:#395d73;
   border: 0;
+  height: 20px;
 }
 .mat-list-text{
   cursor :pointer;
   color:#f3a32a;
   font-family: sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700px;
   line-height: 14px;
   border-top: 2px !important;
   /*margin-top: 2px;*/
+}
+.mat-list-descr{
+  cursor :default;
+  color:#f3a32a;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 700px;
+  line-height: 14px;
+  border-top: 2px !important;
+  margin-top: 8px;
 }
 
 .mat-list-text-parent{
   cursor :pointer;
   color:#f3a32a;
   font-family: sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700px;
   line-height: 14px;
   border-top: 2px !important;
