--- a/src/app/gs-viewer/toolwindow/toolwindow.component.css
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.css
@@ -4,25 +4,31 @@
   font-family:sans-serif;
   width: 100%;
 }
+/*#gsattri-bar{
+  /*width: 100%;*/
+  /*background-color: #f1f1f1 !important;
+  position:relative;
+}*/
 #toolbar{
   background-color: #f1f1f1 !important;
   float: left;
-  width: 50%;
+  width: 30%;
   height: 30px;
   left: 0px;
   margin-top:0px;
+  
   overflow: hidden !important;
   font-family:sans-serif;
-  position: fixed;
+  position: relative !important;
   /*display: flex;*/
   align-items: center;
 }
 #pagination{
-  float: right;
-  width: 50%;
+  float: left;
+  width: 20%;
   height: 30px;
-  right: 0px;
-  position: fixed !important;
+  left: 30%;
+  position: relative !important;
   top:unset !important;
   margin-top: 0px;
   background-color: #f1f1f1 !important;
