--- a/src/styles.scss
+++ b/src/styles.scss
@@ -413,7 +413,6 @@ mat-dialog-container{
 }
 
 .mat-slider-track-fill,
-.mat-slider-thumb,
 .mat-slider-thumb-label {
     background-color: $color1 !important;
 }
@@ -421,6 +420,14 @@ mat-dialog-container{
 .mat-slider-thumb-label-text {
     color: $color1 !important;
     font-size: $fsize2!important;
+}
+
+.mat-slider-thumb{
+	border-radius: 0 !important;
+	background-color: white !important;
+	border: 1px solid $color1 !important;
+	width: 5px !important;
+	right: -5px !important;
 }
 
 .mat-slider-thumb-label{
@@ -435,6 +442,7 @@ mat-dialog-container{
 .mat-slider{
 	width: 90% !important;
 }
+
 
 split-area{
 	div{
